import "Math.proto";

message CombatTurn{
	enum Type{
		ROLE_ATTACK = 0;
		PET_ATTACK = 1;
		ATTACKED_ENERMY = 2;
		ATTACKED_ENERMYPET = 3;
		ATTACKED_NPC = 4;
		TRANSFORM = 5;
	}
	optional Type type = 1;
	optional int64 time = 2;
	optional PB_Vector2i coord = 3;
	optional int32 skillId = 4;
	optional int32 status = 5;
	optional int32 targetID = 6;//1: role, 2: role's pet, 3:npc
	optional int32 damage = 7;
}

message CombatRecord{
	repeated CombatTurn combatTurns = 2;
}

